small update to text and JS

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="content-outer">
       <div class="content">
         <h1><span>SEDI bookmarklet</span></h1>
-        <p>Copying and pasting data from <a href="https://www.sedi.ca/sedi/">SEDI</a> (Canada&rsquo;s System for Electronic Disclosure of Insiders, an insider trading report database) can be a bit touch-and-go, so this is a bookmarklet that&rsquo;ll download a CSV version of the &lsquo;insider transaction detail&rsquo; page. Just drag the button below into your bookmarks bar and you&rsquo;re good to go. Will only work in latest versions of desktop Chrome and Firefox.</p>
+        <p>Copying data from <a href="https://www.sedi.ca/sedi/">SEDI</a> (Canada&rsquo;s System for Electronic Disclosure of Insiders, an insider trading report database) pages and pasting into Excel can be a bit touch-and-go, so this bookmarklet downloads a CSV version of the &lsquo;insider transaction detail&rsquo; page. Just drag the button below into your bookmarks bar and you&rsquo;re good to go. Will only work in latest versions of desktop Chrome and Firefox.</p>
         <p><a id="bookmarklet" href="javascript:javascript: (function () { var e = document.createElement('script'); e.setAttribute('src', 'https://tomcardoso.github.io/sedi-bookmarklet/bookmarklet.js'); e.setAttribute('class', 'sedi-bookmarklet'); document.body.appendChild(e); })();">Grab from SEDI</a></p>
       </div>
     </div>
